--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Demo Site</title>
+    <script src="js/main.js" defer></script>
     <link rel="stylesheet" type="text/css" href="css/mobile.css" />
     <link
-      rel="stylesheet"
-      media="only screen and (min-width:720px)"
-      href="css/desktop.css"
+    rel="stylesheet"
+    media="only screen and (min-width:720px)"
+    href="css/desktop.css"
     />
-    <script>
-      console.dir(document);
-    </script>
   </head>
   <body>
     <div class="container">
