--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
             <img src="" alt="Winter Gardens" id="myImages" />
           </p>
           <p>
-            Change Background colour: <span class="red colPicker">Red</span>,
-            <span class="green colPicker">Green</span>,
-            <span class="blue colPicker">Blue</span>,
+            Change Background colour: 
+            <span class="redBack colPicker">Red</span>,
+            <span class="greenBack colPicker">Green</span>,
+            <span class="blueBack colPicker">Blue</span>,
             <span class="reset colPicker">Default</span>
           </p>
           <div>
