--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Demo Site</title>
     <script src="js/main.js" defer></script>
+    <script src="js/basicBanner.js" defer></script>
     <link rel="stylesheet" type="text/css" href="css/mobile.css" />
     <link
     rel="stylesheet"
@@ -27,9 +28,19 @@
         </nav>
         <div class="content">
           <h2>Rotating Images</h2>
-          <p>
-            <img src="images/view1.jpg" alt="Winter Gardens" id="myImages" />
-          </p>
+          <div class="slider">
+            <div class="slides">
+              <img src="images/banner-image-1.jpg" alt="Silver Ball Fountains">
+              <img src="images/banner-image-2.jpg" alt="Winter Gardens Roof External">
+              <img src="images/banner-image-3.jpg" alt="Winter Gardens Roof Internal">
+              <img src="images/banner-image-4.jpg" alt="Crucible Theatre">
+              <img src="images/banner-image-5.jpg" alt="Now Then Graffiti">
+              <img src="images/banner-image-6.jpg" alt="Winter Gardens Palm Trees">
+            </div>
+
+            <div class="dotNav">
+            </div>
+          </div>
           <p>
             Change Background colour: 
             <span class="redBack colPicker">Red</span>,
